copying files in public folder to builds;

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,12 @@
+<!--
+  This would act as a template for your main html file.
+  Main css and main js would be injected here so no need to manually add them yourself.
+-->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Test App</title>
+    <title>Template HTML</title>
   </head>
   <body>
     <div id="app"></div>
