--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="manifest" href="manifest.json">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
