meta tags that help with SEO; added orientation to manifest;

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=9" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="description" content="This website is amazing billions of people use it every day.">
+    <meta name="author" content="An Amazing Guy">
+    <meta name="keywords" content="Amazing,website,pwa">
+    <meta name="robots" content="index,follow">
+
     <link rel="manifest" href="manifest.json">
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
